@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="5.1.5" date="2023-05-23">
+      <description>
+	<p>
+	  Fixed get property with wrong name of AgsHybridFMSynth OSC1 volume.
+	</p>
+      </description>
+    </release>
+
     <release version="5.1.2" date="2023-05-13">
       <description>
 	<p>
@@ -53,7 +61,7 @@
 	</p>
       </description>
     </release>
-
+    
     <release version="5.1.1" date="2023-05-12">
       <description>
 	<p>
